--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,9 +15,9 @@
     <%- include('share/header.ejs') %>
 
         <!-- 橫幅SLOGAN -->
-        <div class="vg-banner container-xl d-flex justify-content-center" id="slogan">
-            <div class="align-self-center">
-                <i>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </i>
+        <div class="vg-banner container-fluid d-flex justify-content-center" id="slogan">
+            <div class="align-self-center vg-h5">
+                <i>輕鬆訂購，新鮮配送</i>
             </div>
         </div>
         <!-- 橫幅SLOGAN -->
