--- a/views/product.ejs
+++ b/views/product.ejs
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="black"></div>
+    <%- include('share/modal.ejs')%>
 
     <%- include('share/header') %>
     <header>
