--- a/views/product.ejs
+++ b/views/product.ejs
@@ -6,11 +6,9 @@
     <title>Document</title>
     <%- include('share/head_link') %>
     <link rel="stylesheet" href="css/Product_Page.css" />
-    <style></style>
   </head>
   <body>
     <div class="black"></div>
-    <%- include('share/modal.ejs')%>
 
     <%- include('share/header') %>
     <header>
@@ -39,16 +37,16 @@
                 </div>
                 <div class="vg-h3-div2 fu_Mnav">
                   <div class="box">
-                    <button class="btn fu_nav btn-vg">菜單特色</button>
+                    <button class="btn fu_nav">菜單特色</button>
                   </div>
                   <div class="box">
-                    <button class="btn fu_nav btn-vg">週週訂閱</button>
+                    <button class="btn fu_nav">週週訂閱</button>
                   </div>
                   <div class="box">
-                    <button class="btn fu_nav btn-vg">購買須知</button>
+                    <button class="btn fu_nav">購買須知</button>
                   </div>
                   <div class="box">
-                    <button class="btn fu_nav btn-vg">最新活動</button>
+                    <button class="btn fu_nav">最新活動</button>
                   </div>
                 </div>
               </div>
