--- a/views/product.ejs
+++ b/views/product.ejs
@@ -6,11 +6,14 @@
     <title>Document</title>
     <%- include('share/head_link') %>
     <link rel="stylesheet" href="css/Product_Page.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/loadingio/loading.css@v2.0.0/dist/loading.css"
+    />
   </head>
   <body>
     <div class="black"></div>
-
-    <%- include('share/header') %>
+    <%- include('share/modal.ejs') %> <%- include('share/header') %>
     <header>
       <main id="product_main">
         <section class="main-box">
